# kubernetes-patterns

./: .gitignore  README.md  request.sh
1-pod/: sample-api-pod.yml
10-stateful-set/: sample-sc.yml  sample-sts.yml  sample-svc.yml
2-deploy/: sample-api-deploy.yml
2-deploy-svc/: sample-api-svc.yml
3-deploy/: sample-api-deploy.yml
3-deploy-svc-rolling-update/: sample-api-deploy.yml  sample-api-svc.yml
4-deploy-svc-bluegreen-update/: sample-api-svc.yml
4-rolling-update/: sample-api-deploy.yml  sample-api-svc.yml
5-bluegreen-update/: sample-api-deploy-blue.yml  sample-api-deploy-green.yml
6-bluegreen-update/: sample-api-deploy-green.yml  sample-api-svc.yml
6-sidecar/: sample-git-sync.yml
7-autoscaling/: metrics-server-deployment.yml  sample-api-hpa.yml
8-cron-job/: sample-job.yml
9-configuration/: sample-cm.yml  sample-deploy-with-config.yml  sample-deploy-with-secret.yml  sample-deploy-without-config.yml  sample-secret.yml
sample-api/: Cargo.toml  Dockerfile
sample-api/src/: main.rs
sample-api/src/rest/: systems.rs
sample-job/: Cargo.toml  Dockerfile
