[package]
name = "sample-api"
version = "1.0.1"
authors = ["kiccho1101 <youodf11khp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.0.2"
actix-rt = "1.1.1"
log = "0.4"
env_logger = "0.7.1"
serde = "1.0.116"
serde_json = "1.0"
http = "0.2.1"

